fix wrapping problem on mini-feed

--- a/libsrc/app.css
+++ b/libsrc/app.css
@@ -117,7 +117,7 @@ body.home.logged_out .nav{
   width: auto;
   height: auto;
   clear: both;
-  overflow: auto;
+  overflow: hidden;
   margin: 0;
   color: #000;
 }
@@ -184,6 +184,7 @@ body.home.logged_out .nav{
 }
 #feed_menu .feed_item .feed_text {
   height: 59px;
+  white-space: nowrap;
 }
 .feed_item .comment_text {
   font-weight: normal;
